src/test/ui/borrowck/borrowck-thread-local-static-borrow-outlives-fn.ast.nll.stderr
error[E0712]: thread-local variable borrowed past end of function
  --> $DIR/borrowck-thread-local-static-borrow-outlives-fn.rs:11:20
   |
LL |      assert_static(&FOO); //[ast]~ ERROR [E0597]
   |                    ^^^^ thread-local variables cannot be borrowed beyond the end of the function
LL |                           //[mir]~^ ERROR [E0712]
LL | }
   | - end of enclosing function is here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0712`.
